<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GetObjectActivity">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/get_object_activity_imageview" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#77000000"
        android:textColor="#00FFFF"
        android:text="@string/coordTxt"
        android:id="@+id/get_object_activity_coords" />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#77000000"
        android:textColor="#00FF00"
        android:text="@string/helpTxt1"
        android:id="@+id/get_object_activity_help" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.50"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/clearTxt"
            android:onClick="clearPoints"
            android:id="@+id/get_object_activity_clear" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/backTxt"
            android:onClick="returnResult"
            android:id="@+id/get_object_activity_back" />
    </LinearLayout>

</RelativeLayout>
